cmake_minimum_required(VERSION 3.7)
project(Game VERSION 0.1.0 LANGUAGES C CXX)

add_executable(${PROJECT_NAME} src/main.cpp src/game.cpp src/GameLib/vector2d.cpp src/TextureSystem/textureManager.cpp)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
set(SDL2_LIB_DIR ${PROJECT_SOURCE_DIR}/lib/SDL2/libSDL2.dylib)
set(SDL2_IMG_LIB_DIR ${PROJECT_SOURCE_DIR}/lib/SDL2_image/libSDL2_image.dylib)
target_link_libraries(${PROJECT_NAME} ${SDL2_LIB_DIR})
target_link_libraries(${PROJECT_NAME} ${SDL2_IMG_LIB_DIR})
include_directories(${PROJECT_SOURCE_DIR}/include/SDL2/)
include_directories(${PROJECT_SOURCE_DIR}/src/EntityComponentSystem/)
include_directories(${PROJECT_SOURCE_DIR}/src/GameLib/)
include_directories(${PROJECT_SOURCE_DIR}/src/TextureSystem/)
include_directories(${PROJECT_SOURCE_DIR}/src/)